# doNotOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/core/: application.h  editor.h  errors.h  input.h  resourceManager.h  settings.h  timer.h  window.h
include/graphics/: camera.h  mesh.h  object.h  shader.h  texture.h
include/scenes/: scene.h  scene_1.h
shaders/fragment/: light.fs  object.fs  uber.fs
shaders/vertex/: light.vs  object.vs  uber.vs
src/: main.cpp
src/core/: application.cpp  editor.cpp  errors.cpp  input.cpp  resourceManager.cpp  timer.cpp  window.cpp
src/graphics/: camera.cpp  mesh.cpp  object.cpp  shader.cpp  texture.cpp
src/scenes/: scene.cpp  scene_1.cpp
